# mlish

./: .gitignore  Cargo.toml  README.md
mlish-app/: Cargo.toml
mlish-app/src/: build.rs  main.rs
mlish-app/src/app/: mod.rs
mlish-app/src/plugin/: runtime.rs
mlish-app/src/stylesheets/: button.rs  container.rs  mod.rs  text.rs
mlish-app/src/ui/: mod.rs
mlish-core/: Cargo.toml
mlish-core/src/: lib.rs
mlish-core/src/collections/: mod.rs
mlish-core/src/core/service/rpc/: mod.rs
mlish-core/src/domain/: mod.rs
mlish-core/src/domain/blueprints/: mod.rs  rpc.rs
mlish-core/src/domain/entities/: command.rs  mod.rs
mlish-core/src/shared/core/service/rpc/: mod.rs
mlish-core/src/shared/domain/blueprints/: mod.rs  rpc.rs
mlish-core/src/shared/domain/entities/: command.rs  mod.rs
mlish-core/src/utils/: mod.rs
mlish-proc-macro/: Cargo.toml
mlish-services/external-services/api-gateway/: Cargo.toml
mlish-services/internal-services/service-adaptor/: Cargo.toml
