[workspace]
resolver = "3"
members = [
    "mlish-core",
    "mlish-app",
    "mlish-services/external-services/api-gateway",
    "mlish-services/internal-services/service-adaptor",
]

[workspace.dependencies]
mlish-core = { path = "mlish-core" }

tokio = { version = "1.52.0", features = ["full"] }
uuid = { version = "1.23.1", features = ["v7"] }
serde = { version = "1.0.228", features = ["derive"] }
validator = "0.20.0"
serde_json = "1.0.149"
erased-serde = "0.4.10"
rmp-serde = "1.3.1"
time = { version = "0.3.47", features = ["parsing", "formatting", "macros"] }
thiserror = "2.0.18"
tokio-stream = "0.1.18"
strum = "0.28.0"
async-nats = "0.47.0"
