[package]
name = "mlish-app"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[dependencies]
tokio = { workspace = true }
mlish-core = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

iced = { version = "0.14.0", features = ["advanced"] }
wasmer = "7.1.0"

[build-dependencies]
quote = "1.0.45"
