[package]
name = "mlish-core"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
rmp-serde = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
strum = { workspace = true }
async-nats = { workspace = true }
